2010-04-08  Sébastien Merle  <sebastien@flumotion.com>

	* common/common.mk:
	Do not check flumotion/extern with pep8.

2010-04-08  Marc-André Lureau  <mlureau@flumotion.com>

	reviewed by: Sébastien Merle

	* autogen.sh:
	Set default version to 0.7.0.1.
	Overridable with "VERSION=foo autogen.sh"
	Clean .version before autofoo.
	* flumotion/configure/configure.py:
	Split version string such as '0.7.0.1-foo'
	* common/common.mk:
	Make dist-hook use double-colon rule, to be able to add others
	dist-hook rules in different files.
	* common/version-gen (added):
	* Makefile.am:
	* configure.ac:
	* . (svn:ignore):
	Make version from SVN or GIT or tarball release.
	Ignore .version and .tarball-version

2010-04-06  Sébastien Merle  <sebastien@flumotion.com>

	* flumotion/extern/command/command.py:
	Fixed option parsing errors.
	Added a callback for sub-classes special error handling.

2010-04-06  Sébastien Merle  <sebastien@flumotion.com>

	* flumotion/extern/command/command.py:
	* flumotion/extern/command/help2man.py:
	* flumotion/extern/command/help2man.py (added):
	Updated external/command to revision 468.
	Fixed help2man.py to pass pepe8.

2010-04-06  Sébastien Merle  <sebastien@flumotion.com>

	* Makefile.am:
	Fixed the external update target.
	Command find's -prune do not work with -delete.

2010-04-06  Sébastien Merle  <sebastien@flumotion.com>

	reviewed by: Xavier Martinez

	* Makefile.am:
	* flumotion/extern/command/ChangeLog:
	* flumotion/extern/command/README:
	* flumotion/extern/command/__init__.py:
	* flumotion/extern/command/command.py:
	* flumotion/extern/command/test_command.py:
	* flumotion/extern (svn:externals):
	* flumotion/extern/command (added):
	* flumotion/extern/command/test_command.py (added):
	* flumotion/extern/command/command.py (added):
	* flumotion/extern/command/__init__.py (added):
	* flumotion/extern/command/ChangeLog (added):
	* flumotion/extern/command/README (added):
        Changed the SVN external for an export.
